force-app/main/default/objects/ExpTriggerDetailsController__c/ExpTriggerDetailsController__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>A listing of sObjects to be acted upon by a specific Exponent Partners Apex trigger.</description>
    <label>ExpTriggerDetailsController</label>
</CustomObject>