force-app/main/default/objects/ExpTriggerDetailsController__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enable or disable an sObject for the specified Apex trigger. Note that disabling functionality  can affect data correctness and data quality.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>