force-app/main/default/objects/ExpTriggerDetailsController__c/fields/sObjectName__c.field-meta.xml
<CustomField>
    <fullName>sObjectName__c</fullName>
    <inlineHelpText>Example: &quot;Direct_Service__c&quot;</inlineHelpText>
    <label>sObjectName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>